--- a/gb/news2007.md
+++ b/gb/news2007.md
@@ -16,6 +16,8 @@
 <tr><td width="742"><h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/12/n13228257.md#1" target="_blank">暗战赤龙（56）惊天爆炸</a><br></h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/12/n13228257.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/07/id13074103-3581e100e7645b217fe3ddcaf4e33ab4-150x120.jpg" align ="left"></a>“其实我们在西部战区和印度的陆军力量对比半斤对八两，谁也不占优势。但目前战争关键的是空军力量的对比。”杨元简短道来。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月17日 3:00 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/13/n13229017.md#1" target="_blank">史上名人的中秋  异彩传神千载点亮中秋节</a><br></h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/13/n13229017.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/09/id13231808-sea-moon-150x120.jpg" align ="left"></a>中秋节有多少民俗传说，有多少神奇事儿呢？历史上有哪些名人，他们的中秋故事在中华文化中放异彩呢？除了嫦娥，还有谁？一起来回顾，玩味中秋明月，迎接中秋节，在人生的追寻路上增添的勇气薪柴。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月17日 9:42 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/3/n13209098.md#1" target="_blank">趣谈怀旧广式月饼掌故</a><br></h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/3/n13209098.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/09/id13234417-1Z0A7764-150x120.jpg" align ="left"></a>开旧时香港的“月饼纸”（月饼价目表），包装不如当今制成小册子的月饼介绍般精美，但当中的心思不少，邀请画师手绘封面加上写字师傅题字，薄薄一张，简洁又清晰。细阅当中的粤式月饼名称，更是有味道：蛋黄火腿烧鸡月、挂炉鸭腿月、鸡油月、椰丝莲子月、银河夜月??究竟这些月饼是什么，当年一时兴起的“月饼会”又如何运作？文化研究者温佐治.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月17日 4:59 AM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/19/n13245180.md#1" target="_blank">歌词：大月中秋（四叠）</a><br></h3>大月高风寄我思， 中秋队雁唱新词。 师恩天地人神度， 法泽乾坤世界滋！......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月20日 12:21 AM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/19/n13245179.md#1" target="_blank">五绝：上天坡（外一首）</a><br></h3>路远时光少， 山高坎坷多。 修佛无小事， 不懈上天坡！......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月20日 12:10 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/19/n13245319.md#1" target="_blank">一七令?钟</a><br></h3>钟。 暮鼓，晨钟。 禅中坐，坐如钟。 经卷诵读，声似洪钟。 时光飞速快，珍惜每分钟。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月20日 12:02 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/19/n13245354.md#1" target="_blank">诗歌：春日咏怀</a><br></h3>忧患晚来多，频梦临深壑。 危邦固不宜，形骸何所托。 寒气塞苍冥，暮穹经血月。 鬼眼处处荧，监视遍城廓。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月19日 11:26 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/19/n13244781.md#1" target="_blank">七绝：流浪嘉陵</a><br></h3>绵绵霁色染秋黄， 流浪嘉陵是异乡。 望断鸥帆东去远， 风梳乱发快追航！......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月19日 3:51 PM			</td></tr>
@@ -37,7 +39,5 @@
 责任编辑：林芳宇......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月17日 12:46 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/16/n13239357.md#1" target="_blank">五律：秋晨</a><br></h3>仲秋虽夜凉， 一梦到家乡。 破晓天将白， 遮山云正黄。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月17日 12:12 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/16/n13239331.md#1" target="_blank">减字木兰花?忆同修</a><br></h3> 关山难度，难挡修徒归法路。 异国奇逢，万里长风面大雄。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月17日 12:10 AM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/16/n13239349.md#1" target="_blank">七绝：秋雨峨眉</a><br></h3>千年灵隐也飘摇， 爽飒秋风慰寂寥。 细雨如毛成画笔， 峨眉似月好修描！......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月16日 11:23 PM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/16/n13239315.md#1" target="_blank">今月：瘟疫何时能结束——答友人</a><br></h3> 你问瘟疫何时能结束 不用再惧怕险恶的病毒 更大的灾难是否会降临 许多传说惊悚恐怖......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月16日 11:01 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/news2007.md#1">上一页</a>&nbsp;&nbsp;1 &nbsp;&nbsp;<a href="https://github.com/jtmmat3416/djy/blob/master/gb/news2007_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/jtmmat3416/djy/blob/master/gb/news2007_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/jtmmat3416/djy/blob/master/gb/news2007_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/jtmmat3416/djy/blob/master/gb/news2007_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/jtmmat3416/djy/blob/master/gb/news2007_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/jtmmat3416/djy/blob/master/gb/news2007_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/jtmmat3416/djy/blob/master/gb/news2007_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/jtmmat3416/djy/blob/master/gb/news2007_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/jtmmat3416/djy/blob/master/gb/news2007_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/jtmmat3416/djy/blob/master/gb/news2007_2.md#1">下一页</a></h3></td></tr>
 </table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/jtmmat3416/djy/blob/master/gb/news2007.md#1<br><a href="https://github.com/jtmmat3416/djy/blob/master/gb/news2007.md#1"><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/jtmmat3416/djy/blob/master/gb/news2007.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/news2007.htm">https://www.epochtimes.com/gb/news2007.htm</a>    （国内需<a href="https://github.com/jtmmat3416/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
