--- a/gb/nf4514.md
+++ b/gb/nf4514.md
@@ -12,6 +12,7 @@
 <tr><td width="742"><h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/19/n13244498.md#1" target="_blank">分享中国传统文化 新世纪中秋游园日受褒奖</a><br></h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/19/n13244498.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/09/id13244507-image00015-150x120.jpeg" align ="left"></a>9月18日，位于纽约上州橙县鹿苑镇（the town of Deerpark，Orange County）的新世纪公司（the New Century）举办了今年的中秋游庆祝活动，受到了当地居民的热情欢迎，逾千人参加了本次游园活动。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月19日 2:56 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/19/n13244483.md#1" target="_blank">恒大受害人患病求兑付被拒 维权遭警传唤</a><br></h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/19/n13244483.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/09/id13244490-GettyImages-1235284069-150x120.jpg" align ="left"></a>恒大集团旗下的“恒大财富”理财产品逾期未兑付，18日凌晨，恒大集团发布公告称，截至今年5月1日，有六名高管提前赎回12笔投资产品，引发不满。有受害人告诉大纪元，她罹癌开刀急需医药费，却被拒绝提前兑付，现在只能靠卡债度日。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月19日 11:40 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/18/n13244185.md#1" target="_blank">上万非法移民聚德州立交桥下 美宣布驱逐</a><br></h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/18/n13244185.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/09/id13244197-Border-Del-Rio-bridge-IMG_1204-150x120.jpg" align ="left"></a>美国国土安全部（DHS）周六宣布，聚集在德州高速立交桥下的非法移民将被驱逐。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月19日 8:05 AM							</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/18/n13244249.md#1" target="_blank">【横河观点】世界为何对中共移植黑幕沉默？</a><br></h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/18/n13244249.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/07/id13124464-Untitled-150x120.jpg" align ="left"></a>医生披露为何世界对中共强摘器官视而不见，他们相信此事但不说，医学界的共同利益捆绑不仅在疫情和活摘，强摘器官谁最先曝光的？......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月19日 8:02 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/18/n13244178.md#1" target="_blank">美日澳印将举行四方峰会 加强芯片供应链安全</a><br></h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/18/n13244178.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/09/id13231394-GettyImages-1231667255-150x120.jpg" align ="left"></a>《日经新闻》周六（9月18日）报导说，他们获得的一份下周四方会谈的联合声明草案显示，美国、日本、澳大利亚、印度四国将把先进技术与人权联系在一起，反对中国（中共）利用科学和技术在世界各地维护独裁政权。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月19日 6:04 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/17/n13241762.md#1" target="_blank">【名家专栏】中共经济胁迫的豪赌正在失败</a><br></h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/17/n13241762.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/09/id13241778-Gardner_china_coercion-1200x800-150x120.jpg" align ="left"></a>北京的经济胁迫正在经历其它国家的抗拒。近来，立陶宛在北京日益加剧的威胁下拒绝屈服，而且，立陶宛国民的信念不但没有减弱，还在增强。尤其值得一提的是，这是在美国和欧盟对中国挑起的经济战缺乏对策的大环境下，立陶宛敢说不。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月19日 6:01 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/18/n13242771.md#1" target="_blank">【独家】文件泄河南迫害法轮功的轨迹</a><br></h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/18/n13242771.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/07/id13094510-9ED1714-150x120.jpg" align ="left"></a>近日，大纪元获得中共河南当局近10年来有关迫害法轮功的内部文件。文件显示，河南省商丘市从乡村（街道、社区）到学校、政府等部门全方位打压法轮功，并制定一系列措施实施迫害，非法抓捕法轮功学员。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月19日 4:38 AM							</td></tr>
@@ -33,6 +34,5 @@
 <tr><td width="742"><h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/17/n13241408.md#1" target="_blank">【疫情9.17】台湾赠万台血氧仪 日本感谢</a><br></h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/17/n13241408.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/04/id12911837-GettyImages-1230560029-600x400-150x120.jpg" align ="left"></a>据约翰?霍普金斯大学的统计数据，截至美东夏令时周五（9月17日）清晨5:50，全球的中共病毒（武汉肺炎、COVID-19）病例总数超过2.27亿（227,113,468）例，死亡人数超过467万（4,671,514）人。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月17日 7:55 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/17/n13240998.md#1" target="_blank">封中国卖家账号 亚马逊回应：反复滥用评论</a><br></h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/17/n13240998.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/08/id13163448-511712-150x120.jpg" align ="left"></a>9月17日，亚马逊全球副总裁、亚马逊全球开店亚太区执行总裁对媒体表示，在近期关注的封号事件中，亚马逊共封禁总计600个中国品牌的销售、约3000个卖家账号，这些账号均有多次反复滥用评论行为，亚马逊过去曾给出多次警告。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月17日 6:57 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/17/n13240248.md#1" target="_blank">【中国观察】北戴河会议后的政经风暴</a><br></h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/17/n13240248.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/09/id13228369-p8638621a666309283-600x400-150x120.jpeg" align ="left"></a>政治挂帅的红色舆论刚刚终结了百年党庆，宣称建成“小康社会”的北京当局，在北戴河会议后突然提出“共同富裕”的口号，一场关于钱的“斗争”在中国社会卷起了风暴。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月17日 4:19 PM							</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/18/n13244249.md#1" target="_blank">【横河观点】世界为何对中共移植黑幕沉默？</a><br></h3>医生披露为何世界对中共强摘器官视而不见，他们相信此事但不说，医学界的共同利益捆绑不仅在疫情和活摘，强摘器官谁最先曝光的？......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月19日 8:02 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/nf4514.md#1">上一页</a>&nbsp;&nbsp;1 &nbsp;&nbsp;<a href="https://github.com/jtmmat3416/djy/blob/master/gb/nf4514_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/jtmmat3416/djy/blob/master/gb/nf4514_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/jtmmat3416/djy/blob/master/gb/nf4514_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/jtmmat3416/djy/blob/master/gb/nf4514_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/jtmmat3416/djy/blob/master/gb/nf4514_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/jtmmat3416/djy/blob/master/gb/nf4514_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/jtmmat3416/djy/blob/master/gb/nf4514_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/jtmmat3416/djy/blob/master/gb/nf4514_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/jtmmat3416/djy/blob/master/gb/nf4514_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/jtmmat3416/djy/blob/master/gb/nf4514_2.md#1">下一页</a></h3></td></tr>
 </table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/jtmmat3416/djy/blob/master/gb/nf4514.md#1<br><a href="https://github.com/jtmmat3416/djy/blob/master/gb/nf4514.md#1"><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/jtmmat3416/djy/blob/master/gb/nf4514.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/nf4514.htm">https://www.epochtimes.com/gb/nf4514.htm</a>    （国内需<a href="https://github.com/jtmmat3416/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
